# ansible-inventory-github

./: .editorconfig  .gitignore  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  ansible.cfg  galaxy.yml  playbook.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  tox.ini
.github/workflows/: tests.yml
inventory/: my.github_repositories.yml  my.github_repositories.yml.sample
inventory.sample/: my.github_repositories.yml
plugins/inventory/: github_repositories.py  github_repositories_inventory.py
tests/: README.md  conftest.py
tests/integration/: test_github_repositories_integration.py
tests/integration/inventory/: github_repositories.yml
tests/unit/plugins/inventory/: __init__.py  test_github_repositories_inventory.py
